// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCommunity with template, topics and networkId includes networkId in variables 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($data: CommunityInput) {
        createCommunity(data: $data) {
          id
          hasModeratorRole
          community {
            id
            name
            slug
            network {
              id
            }
          }
        }
      }
      ",
    "variables": Object {
      "data": Object {
        "communityTemplateId": 1,
        "defaultTopics": Array [
          "topic",
        ],
        "name": "thename",
        "networkId": 123,
        "slug": "theslug",
      },
    },
  },
  "meta": Object {
    "analytics": "Community Created",
    "communityTemplateId": 1,
    "defaultTopics": Array [
      "topic",
    ],
    "extractModel": "Membership",
    "name": "thename",
    "networkId": 123,
    "slug": "theslug",
  },
  "type": "Review/CREATE_COMMUNITY",
}
`;

exports[`createCommunity without networkId omits networkId from variables 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($data: CommunityInput) {
        createCommunity(data: $data) {
          id
          hasModeratorRole
          community {
            id
            name
            slug
            network {
              id
            }
          }
        }
      }
      ",
    "variables": Object {
      "data": Object {
        "communityTemplateId": undefined,
        "defaultTopics": undefined,
        "name": "thename",
        "slug": "theslug",
      },
    },
  },
  "meta": Object {
    "analytics": "Community Created",
    "communityTemplateId": undefined,
    "defaultTopics": undefined,
    "extractModel": "Membership",
    "name": "thename",
    "slug": "theslug",
  },
  "type": "Review/CREATE_COMMUNITY",
}
`;
